--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -27,5 +27,14 @@
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
         android:text="Pause" />
+    
+    <Button
+        android:id="@+id/recenter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/pause"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="9dp"
+        android:text="Recenter" />
 
 </RelativeLayout>
