--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,10 +55,17 @@
             android:text="Start recording" />
 
         <Button
-            android:id="@+id/help"
+            android:id="@+id/calibrate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/start"
+            android:text="Calibrate" />
+
+        <Button
+            android:id="@+id/help"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/calibrate"
             android:text="How to use" />
     </RelativeLayout>
 </LinearLayout>
