--- a/app/src/main/res/layout/activity_calibrate.xml
+++ b/app/src/main/res/layout/activity_calibrate.xml
@@ -42,6 +42,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/start"
-            android:text="Cancel" />
+            android:text="Return" />
     </LinearLayout>
 </RelativeLayout>
