--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_weight="3">
+    android:layout_weight="3"
+    android:background="#FAFAFA">
 
     <ImageView
         android:layout_weight="1.7"
