--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -11,32 +11,24 @@
         android:layout_height="match_parent" />
 
     <Button
-        android:id="@+id/finish"
+        android:id="@+id/start_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginStart="20dp"
-        android:text="Finish" />
-    <Button
-        android:id="@+id/start_pause"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginBottom="20dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
         android:background="#4CBB17"
         android:text="Start" />
-    
+
     <Button
         android:id="@+id/recenter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@id/start_pause"
+        android:layout_above="@id/start_finish"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="0dp"
         android:text="Recenter" />
 
 </RelativeLayout>
