Commenting and cleanup

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -73,6 +73,6 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/btn_rounded_corners"
-            android:text="End" />
+            android:text="Finish" />
     </LinearLayout>
 </RelativeLayout>
